# plare

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Metaworld/metaworld/envs/assets_v2/objects/assets/: block_dependencies.xml  xyz_base_transparent.xml
Metaworld/metaworld/envs/assets_v2/sawyer_xyz/: sawyer_bin_picking.xml  sawyer_button_press.xml  sawyer_door_pull.xml  sawyer_drawer.xml  sawyer_plate_slide.xml  sawyer_table_with_hole.xml
Metaworld/metaworld/envs/mujoco/: mujoco_env.py
bash_scripts/: get_results.sh  run_plare.sh  run_rlvlmf.sh  script_generate_vlm_preference.sh  script_render_visual_states.sh
configs/: plare.yaml  rlvlmf.yaml
datasets/pref/: .gitkeep
datasets/pref_image_only/: .gitkeep
datasets/vlm_feedback/: .gitkeep
research/ai_feedback/: text_prompt_library.py  vlm_query.py
research/algs/: __init__.py  cpl.py  iql.py
research/datasets/: feedback_buffer.py
research/envs/: metaworld.py
research/networks/: mlp.py
research/utils/: config.py  plotter.py  trainer.py  utils.py
scripts/: generate_vlm_preference.py  plot.py  render_metaworld_dataset.py  train.py
